# vnctlsd

./: .gitignore  LICENSE  README.md  mise.toml
.github/workflows/: ci.yml
bridge/: vnctl-user-pipe.c  vnctlsd-pam-bridge  vnctlsd-ssh-bridge
client/vnctl/: go.mod  main.go  main_test.go  proxy.go  proxy_test.go  ssh.go  tls.go
daemon/: vnctlsd.py
daemon/example/: consoles.yaml
docs/: pam-bridge.md
server/: pyproject.toml  vnctlsd-ssh-bridge
server/example/: consoles.yaml  users.yaml  vnctlsd.ini
server/src/vnctlsd/: __init__.py  __main__.py  acl.py  auth.py  cli.py  config.py  constants.py  glob_patterns.py  hub.py  ipc.py  logger.py  monitor.py  output.py  process.py  security.py  session.py  validation.py  watcher.py  worker.py
server/tests/: conftest.py  test_auth_session.py  test_config_acl.py  test_glob_output.py  test_ipc.py  test_session_validation.py
