[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vnctlsd"
version = "0.1.0"
description = "Conserver-style serial console dispatcher with privilege separation"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "setproctitle>=1.3",
]

[dependency-groups]
dev = [
    "Cython",
    "pyright",
    "pytest",
    "ruff",
    "setuptools>=80",
]

[project.scripts]
vnctlsd = "vnctlsd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vnctlsd"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "Q",
    "ANN001",  # Enforce type hints on function arguments
    "ANN201",  # Enforce return types on public functions
    "ANN202",  # Enforce return types on private functions
]
